# WalkSAT_SNC

./: CMakeLists.txt  bench_walksat.cpp  main.cpp  walksat.cpp  walksat.h  walksatSNC.cpp  walksatSNC.h
